define header style and layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="container">
+
     <div class="sidebar">
       <div class="sidebar-title"><i class="fa-solid fa-gears fa-2xl"></i><h2>Dashboard</h2></div>
       <div class="sidebar-links">
@@ -24,9 +25,23 @@
       </div>
       <div></div>
     </div>
+
     <div class="header">
-      <h2>Effendir</h2>
+      <div class="user">
+        <p>Hi there,</p>
+        <h2>Effendir (@effendir)</h2>
+        <img src="/images/profile-pic.jpg" alt="Bender character picture">
+      </div>
+      <div class="search-bar">
+        <input type="text" placeholder="Search..">
+      </div>
+      <div class="toolbar">
+        <i class="fa-solid fa-circle-plus fa-xl"></i>
+        <i class="fa-solid fa-circle-minus fa-xl"></i>
+        <i class="fa-solid fa-share fa-xl"></i>
+      </div>
     </div>
+
     <div class="wrapper">
       <div class="projects">
         <h3>My projects</h3>
@@ -38,7 +53,7 @@
         <h3>Trending</h3>
       </div>
     </div>
-    <footer><p>Footer made by Effendir</p></footer>
+    <footer><p>Footer made by Effendir</p> <a href="https://unsplash.com/fr/photos/robot-blanc-sur-un-champ-dherbe-verte-pendant-la-journee-JINPheIkUek?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash">Profile pic</a></footer>
   </div>
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/c41c28ac80.js" crossorigin="anonymous"></script>
