--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
         <h3>Trending</h3>
       </div>
     </div>
-    <footer><p>Footer made by Effendir</p> <a href="https://unsplash.com/fr/photos/robot-blanc-sur-un-champ-dherbe-verte-pendant-la-journee-JINPheIkUek?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash">Profile pic</a></footer>
+    <footer>
+      <div class="footer-links">
+        <a href="https://github.com/Effendir"><i class="fab fa-github fa-xl"></i></a>
+        <a href="https://fr.linkedin.com/in/eug%C3%A8ne-dami-4537442ab"><i class="fab fa-linkedin fa-xl"></i></a>
+      </div>
+      <div class="footer-copyright">
+        <p>Made with <i class="fas fa-heart"></i> and <i class="fa-solid fa-mug-hot"></i> by Effendir.</p>
+      </div>
+      <a href="https://unsplash.com/fr/photos/robot-blanc-sur-un-champ-dherbe-verte-pendant-la-journee-JINPheIkUek?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash">Profile pic</a>
+    </footer>
   </div>
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/c41c28ac80.js" crossorigin="anonymous"></script>
