Define news and trending cards layout and style

--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
       <div class="projects">
         <h3>My projects</h3>
       </div>
-      <div class="announcements">
-        <h3>Announcements</h3>
+      <div class="news">
+        <h3>News</h3>
+        <div class="news-card"></div>
       </div>
       <div class="trending">
         <h3>Trending</h3>
+        <div class="trending-card"></div>
       </div>
     </div>
+
     <footer>
       <div class="footer-links">
         <a href="https://github.com/Effendir"><i class="fab fa-github fa-xl"></i></a>
@@ -62,6 +65,7 @@
         <p>Made with <i class="fas fa-heart"></i> and <i class="fa-solid fa-mug-hot"></i> by Effendir.</p>
       </div>
       <a href="https://unsplash.com/fr/photos/robot-blanc-sur-un-champ-dherbe-verte-pendant-la-journee-JINPheIkUek?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash">Profile pic</a>
+      <a href="https://getcssscan.com/css-box-shadow-examples">Box shadow</a>
     </footer>
   </div>
   <script src="script.js"></script>
