Define news and trending cards content

--- a/index.html
+++ b/index.html
@@ -48,11 +48,22 @@
       </div>
       <div class="news">
         <h3>News</h3>
-        <div class="news-card"></div>
+        <div class="news-card">
+          <p>My cat ate the balcony flowers and threw up on my bed <i class="fa-solid fa-thumbs-up"></i> <i class="fa-solid fa-thumbs-down"></i></p>
+          <hr>
+          <p>New projects coming soon! Using react I hope <i class="fa-solid fa-thumbs-up"></i> <i class="fa-solid fa-thumbs-down"></i></p>
+          <hr>
+          <p>This page wasn't meant to be mobile responsive, but it is resizable anyway <i class="fa-solid fa-thumbs-up"></i> <i class="fa-solid fa-thumbs-down"></i></p>
+        </div>
       </div>
       <div class="trending">
         <h3>Trending</h3>
-        <div class="trending-card"></div>
+        <div class="trending-card">
+          <p>Cat Power <img src="/images/cat-power.jpg" alt="Cat Power"></p>
+          <p>Doja Cat <img src="/images/doja.jpg" alt="Doja Cat"></p>
+          <p>My Cat <img src="/images/cat.jpeg" alt="My cat"></p>
+          <p>Cat Stevens <img src="/images/cat-stevens.jpg" alt="Cat Stevens"></p>
+        </div>
       </div>
     </div>
 
@@ -64,8 +75,11 @@
       <div class="footer-copyright">
         <p>Made with <i class="fas fa-heart"></i> and <i class="fa-solid fa-mug-hot"></i> by Effendir.</p>
       </div>
-      <a href="https://unsplash.com/fr/photos/robot-blanc-sur-un-champ-dherbe-verte-pendant-la-journee-JINPheIkUek?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash">Profile pic</a>
-      <a href="https://getcssscan.com/css-box-shadow-examples">Box shadow</a>
+      <div>
+        <a href="https://unsplash.com/fr/photos/robot-blanc-sur-un-champ-dherbe-verte-pendant-la-journee-JINPheIkUek?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash">Profile pic</a>
+        /
+        <a href="https://getcssscan.com/css-box-shadow-examples">Box shadow</a>
+      </div>
     </footer>
   </div>
   <script src="script.js"></script>
