Define projects cards layout and style

--- a/index.html
+++ b/index.html
@@ -43,9 +43,25 @@
     </div>
 
     <div class="wrapper">
+
       <div class="projects">
         <h3>My projects</h3>
+        <div class="projects-cards">
+          <div class="project-card"><h4>Unwind Landing Page</h4>
+          <p>A landing page project made with HTML, CSS and Javascript, including a fully fonctionnal contact form.</p></div>
+          <div class="project-card"><h4>Cat advisor</h4>
+          <p>Want to rent a cat? Get rid of your own constantly meowing furniture scratching plants chewing adorable furball? Say no more.</p></div>
+          <div class="project-card"><h4>Shifumi</h4>
+          <p>Well, no explanation needed. Yes we love minimalism so what?</p></div>
+          <div class="project-card"><h4>Sketch me a rainbow</h4>
+          <p>Actually you can sketch anything you want, no need for it to be a rainbow. Duh!</p></div>
+          <div class="project-card"><h4>Choculator</h4>
+          <p>Like a calculator, but this one's yummy A.F.</p></div>
+          <div class="project-card"><h4>My Dashboard</h4>
+          <p>The very page you're on. Next time someone asks you to explain the concept of "mise en abyme" you can simply show this page. Don't thank me.</p></div>
+        </div>
       </div>
+
       <div class="news">
         <h3>News</h3>
         <div class="news-card">
@@ -56,15 +72,17 @@
           <p>This page wasn't meant to be mobile responsive, but it is resizable anyway <i class="fa-solid fa-thumbs-up"></i> <i class="fa-solid fa-thumbs-down"></i></p>
         </div>
       </div>
+
       <div class="trending">
         <h3>Trending</h3>
         <div class="trending-card">
-          <p>Cat Power <img src="/images/cat-power.jpg" alt="Cat Power"></p>
-          <p>Doja Cat <img src="/images/doja.jpg" alt="Doja Cat"></p>
-          <p>My Cat <img src="/images/cat.jpeg" alt="My cat"></p>
-          <p>Cat Stevens <img src="/images/cat-stevens.jpg" alt="Cat Stevens"></p>
+          <img src="/images/cat-power.jpg" alt="Cat Power"><p>Cat Power</p>
+          <img src="/images/doja.jpg" alt="Doja Cat"><p>Doja Cat</p>
+          <img src="/images/cat.jpeg" alt="My cat"><p>My cat</p>
+          <img src="/images/cat-stevens.jpg" alt="Cat Stevens"><p>Cat stevens</p>
         </div>
       </div>
+
     </div>
 
     <footer>
