--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="user">
         <p>Hi there,</p>
         <h2>Effendir (@effendir)</h2>
-        <img src="/images/profile-pic.JPG" alt="Bender character picture">
+        <img src="images/profile-pic.JPG" alt="Bender character picture">
       </div>
       <div class="search-bar">
         <input type="text" placeholder="Search..">
