Fix path for all broken images

--- a/index.html
+++ b/index.html
@@ -49,31 +49,31 @@
         <div class="projects-cards">
           <a href="https://effendir.github.io/unwind/" target="_blank">
             <div class="project-card"><h4>Unwind Landing Page</h4>
-            <img src="/images/unwind.png" alt="Unwind website">
+            <img src="images/unwind.png" alt="Unwind website">
             <p>A landing page project made with HTML, CSS and Javascript, including a fully fonctionnal contact form.</p></div>
           </a>
           <a href="https://effendir.github.io/signup/" target="_blank">
             <div class="project-card"><h4>Cat advisor</h4>
-              <img src="/images/cat-advisor.jpg" alt="Cat Advisor website">
+              <img src="images/cat-advisor.jpg" alt="Cat Advisor website">
             <p>Want to rent a cat? Get rid of your cat? Or simply take a look at cat pictures? Say no more.</p></div>
           </a>
           <a href="https://effendir.github.io/shifumi/" target="_blank">
             <div class="project-card"><h4>Shifumi</h4>
-              <img src="/images/shifumi.jpg" alt="Shifumi website">
+              <img src="images/shifumi.jpg" alt="Shifumi website">
             <p>Well, no explanation needed. Yes we love minimalism so what?</p></div>
           </a>
           <a href="https://effendir.github.io/sketch/" target="_blank">
             <div class="project-card"><h4>Sketch me a rainbow</h4>
-              <img src="/images/sketch.jpg" alt="Etch a sketch app">
+              <img src="images/sketch.jpg" alt="Etch a sketch app">
             <p>Actually you can sketch anything you want, no need for it to be a rainbow.</p></div>
           </a>
           <a href="https://effendir.github.io/calculator/" target="_blank">
             <div class="project-card"><h4>Choculator</h4>
-              <img src="/images/choculator.jpg" alt="Choculator app">
+              <img src="images/choculator.jpg" alt="Choculator app">
             <p>Like a calculator, well actually a fully functionnal calculator. No less! But there's more : this one's yummy A.F.</p></div>
           </a>
           <div class="project-card"><h4>My Dashboard</h4>
-            <img src="/images/dashboard.jpg" alt="My dashboard website">
+            <img src="images/dashboard.jpg" alt="My dashboard website">
           <p>Next time someone asks you to explain the concept of "mise en abyme" you can simply show this page. Don't thank me.</p></div>
         </div>
       </div>
@@ -92,10 +92,10 @@
       <div class="trending">
         <h3>Trending</h3>
         <div class="trending-card">
-          <img src="/images/cat-power.jpg" alt="Cat Power"><p>Cat Power</p>
-          <img src="/images/doja.jpg" alt="Doja Cat"><p>Doja Cat</p>
-          <img src="/images/cat.jpeg" alt="My cat"><p>My cat</p>
-          <img src="/images/cat-stevens.jpg" alt="Cat Stevens"><p>Cat stevens</p>
+          <img src="images/cat-power.jpg" alt="Cat Power"><p>Cat Power</p>
+          <img src="images/doja.jpg" alt="Doja Cat"><p>Doja Cat</p>
+          <img src="images/cat.jpeg" alt="My cat"><p>My cat</p>
+          <img src="images/cat-stevens.jpg" alt="Cat Stevens"><p>Cat stevens</p>
         </div>
       </div>
 
