--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
           <div class="project-card"><h4>My Dashboard</h4>
             <img src="images/dashboard.jpg" alt="My dashboard website">
           <p>Next time someone asks you to explain the concept of "mise en abyme" you can simply show this page. Don't thank me.</p></div>
+          <div class="project-card"><h4>My Library</h4>
+            <img src="images/library.png" alt="My library website">
+          <p>You can add and remove books of your collections with details such as cover/pages/title/author and mark them as read</p></div>
         </div>
       </div>
 
