Fix cards overflowing footer

--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
     <div class="wrapper">
 
       <div class="projects">
+
         <h3>My projects</h3>
+
         <div class="projects-cards">
+
           <a href="https://effendir.github.io/unwind/" target="_blank">
             <div class="project-card"><h4>Unwind Landing Page</h4>
             <img src="images/unwind.png" alt="Unwind website">
@@ -59,12 +62,12 @@
           </a>
           <a href="https://effendir.github.io/shifumi/" target="_blank">
             <div class="project-card"><h4>Shifumi</h4>
-              <img src="images/shifumi.jpg" alt="Shifumi website">
+              <img src="images/shifumi.png" alt="Shifumi website">
             <p>Well, no explanation needed. Yes we love minimalism so what?</p></div>
           </a>
           <a href="https://effendir.github.io/sketch/" target="_blank">
             <div class="project-card"><h4>Sketch me a rainbow</h4>
-              <img src="images/sketch.jpg" alt="Etch a sketch app">
+              <img src="images/sketch.png" alt="Etch a sketch app">
             <p>Actually you can sketch anything you want, no need for it to be a rainbow.</p></div>
           </a>
           <a href="https://effendir.github.io/calculator/" target="_blank">
@@ -78,7 +81,9 @@
           <div class="project-card"><h4>My Library</h4>
             <img src="images/library.png" alt="My library website">
           <p>You can add and remove books of your collections with details such as cover/pages/title/author and mark them as read</p></div>
+
         </div>
+
       </div>
 
       <div class="news">
@@ -118,6 +123,7 @@
         <a href="https://getcssscan.com/css-box-shadow-examples">Box shadow</a>
       </div>
     </footer>
+
   </div>
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/c41c28ac80.js" crossorigin="anonymous"></script>
