Add tic tac toe card

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
               <img src="images/library.png" alt="My library website">
             <p>You can add and remove books of your collections with details such as cover/pages/title/author and mark them as read</p></div>
           </a>
+          <a href="https://effendir.github.io/tic-tac-toe/" target="_blank">
+            <div class="project-card"><h4>Tic Tac Toe</h4>
+              <img src="images/tic-tac-toe.png" alt="Tic Tac Toe website">
+            <p>A simple tic tac toe game with two players. Keeps tracks of scores</p></div>
+          </a>
 
         </div>
 
