Add a website to the list

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
               <img src="images/tic-tac-toe.png" alt="Tic Tac Toe website">
             <p>A simple tic tac toe game with two players. Keeps tracks of scores</p></div>
           </a>
+          <a href="https://effendir.github.io/restaurant/" target="_blank">
+            <div class="project-card"><h4>Lily's Table</h4>
+              <img src="images/restaurant.png" alt="restaurant website">
+            <p>A single page app made with webpack and Javascript</p></div>
+          </a>
 
         </div>
 
